# openapi_to_click

./: .gitignore  README.md  main.py  pyproject.toml  test_parser.py  test_spec.json
.github/workflows/: pr-unit-tests.yml
app/: main.py
templates/: cli_template.jinja2
tests/: test_main.py
